--- a/breathing_room/musics/index.html
+++ b/breathing_room/musics/index.html
@@ -42,7 +42,7 @@
 <body>
 
   <div class="music-wrap">
-    <h1>숨틔움 음악</h1>
+    <h1>숨틔움 음악(준비 중입니다.^^)</h1>
     <p>짧은 음악이나 사운드를 재생할 수 있는 공간입니다.</p>
 
     <div id="musicStatus">불러오는 중…</div>
