--- a/help_notices/index.html
+++ b/help_notices/index.html
@@ -2,96 +2,35 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>도움말 및 공지 | 루웨인 소식</title>
-<style>
-:root{
-  --accent:#af2465;--teal:#2a9d8f;--ink:#222;--muted:#6c5b7b;--bg:#f9fafa;
-}
-*{box-sizing:border-box}
-body{margin:0;font-family:'Noto Sans KR',sans-serif;background:var(--bg);color:var(--ink)}
-main{max-width:960px;margin:0 auto;padding:1.25rem}
-.search{display:flex;gap:.5rem;margin:1rem 0}
-.search input{flex:1;padding:.7rem;border:1px solid #ddd;border-radius:.6rem}
-.search button{padding:.7rem 1rem;border:1px solid var(--teal);background:#fff;color:var(--teal);border-radius:.6rem;cursor:pointer}
-.grid{display:grid;grid-template-columns:1fr 1fr;gap:1rem}
-section{background:#fff;border:1px solid #eee;border-radius:12px;padding:1rem}
-h2{margin:.2rem 0 1rem 0;font-size:1.1rem;color:var(--muted)}
-ul{margin:.2rem 0;padding-left:1rem}
-a{color:var(--teal);text-decoration:none}
-a:hover{text-decoration:underline}
-details{border:1px solid #eee;border-radius:10px;padding:.6rem;margin:.5rem 0;background:#fff}
-summary{cursor:pointer;color:#444;font-weight:600}
-@media (max-width:800px){.grid{grid-template-columns:1fr}}
-</style>
-<!-- header.html 의 </head> 바로 위쪽에 추가 -->
-<script src="https://unpkg.com/@supabase/supabase-js@2" defer></script>
-<script type="module" src="/scripts/memory_policies.js" defer></script>
-<link rel="manifest" href="/manifest.json">
-<script>
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/service-worker.js')
-      .then(reg => console.log('ServiceWorker registered:', reg))
-      .catch(err => console.warn('ServiceWorker registration failed:', err));
-  });
-}
-</script>
-
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>도움터</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<!-- ✅ 헤더 -->
-<div id="luwein-header"></div>
-<script>
-(async()=>{
-  const paths=["../includes/header.html","../../includes/header.html","/includes/header.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-header").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
-</script>
+<h1 class="page-title">도움터</h1>
+<button class="btn" onclick="showWrite()">문의하기</button>
 
-<main>
-  <div class="search">
-    <input type="search" placeholder="키워드로 도움말/공지 검색">
-    <button>검색</button>
-  </div>
+<div id="help-list"></div>
 
-  <div class="grid">
-    <section>
-      <h2>📢 최신 공지</h2>
-      <ul>
-        <li><a href="docs/루웨인_트리니티.docx">《루웨인 트리니티》 정식판 공개</a></li>
-        <li><a href="docs/루웨인_빌리지.docx">《루웨인 빌리지》 발간</a></li>
-        <li><a href="docs/운영규칙_v2.0.docx">운영 규칙 v2.0 확정</a></li>
-      </ul>
-    </section>
+<div id="help-view" style="display:none;">
+  <h2 id="v-title"></h2>
+  <div id="v-author"></div>
+  <div id="v-date"></div>
+  <div id="v-content"></div>
+  <button class="btn" onclick="showList()">목록으로</button>
+</div>
 
-    <section>
-      <h2>❓ FAQ</h2>
-      <details><summary>비밀번호를 잊어버렸어요</summary><div>설명 자리(추후 교체)</div></details>
-      <details><summary>업로드가 실패합니다</summary><div>설명 자리(추후 교체)</div></details>
-      <details><summary>권한 요청은 어떻게 하나요?</summary><div>설명 자리(추후 교체)</div></details>
-    </section>
-  </div>
-</main>
+<div id="help-write" style="display:none;">
+  <input id="w-author" class="input" placeholder="작성자(익명)">
+  <input id="w-title" class="input" placeholder="제목">
+  <textarea id="w-content" class="textarea" placeholder="내용"></textarea>
+  <label><input type="checkbox" id="w-secret"> 비밀글</label>
+  <button class="btn" onclick="saveHelp()">등록</button>
+</div>
 
-<!-- ✅ 푸터 -->
-<div id="luwein-footer"></div>
-<script>
-(async()=>{
-  const paths=["../includes/footer.html","../../includes/footer.html","/includes/footer.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-footer").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
-</script>
+<script type="module" src="./help.js"></script>
+<script>showList();</script>
+
 </body>
 </html>
