--- a/goods/index.html
+++ b/goods/index.html
@@ -1,108 +1,107 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>루웨인 트리니티 | 전자도서관 허브</title>
-  <link rel="stylesheet" href="./style.css">
+<meta charset="UTF-8">
+<title>루웨인 굿즈 허브</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
+<style>
     body {
-      font-family: 'Noto Sans KR', sans-serif;
-      background: linear-gradient(to bottom, #f5f8fa, #e8eef2);
-      margin: 0; color: #222; line-height: 1.6em;
+        font-family: "Noto Sans KR", sans-serif;
+        background: #f3f6fa;
+        margin: 0;
+        padding: 0;
+        color: #222;
     }
-    header, footer {
-      background: #0c2233; color: white; text-align: center;
-      padding: 1.2em 0; box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    header {
+        background: #0c2233;
+        color: white;
+        text-align: center;
+        padding: 1.3em 0;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
-    h1 { color: #fff; margin: 0; font-size: 1.8em; }
-    main { max-width: 900px; margin: 2.5em auto; padding: 2em; background:white; border-radius: 16px; box-shadow:0 3px 10px rgba(0,0,0,0.1); }
-    section { margin-bottom: 2em; }
-    h2 { color: #0c2233; border-left: 6px solid #118bee; padding-left: .5em; }
-    p { margin: .8em 0; }
-    a.button {
-      display: inline-block; margin: 1em .5em 0 0; padding: .8em 1.4em;
-      border-radius: 8px; text-decoration: none; color: white;
-      background: #118bee; font-weight: bold; box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      transition: all .2s;
+    h1 { margin: 0; font-size: 1.7em; }
+    main {
+        max-width: 900px;
+        margin: 2.2em auto;
+        padding: 1.6em;
+        background: white;
+        border-radius: 14px;
+        box-shadow: 0 3px 10px rgba(0,0,0,0.1);
     }
-    a.button:hover { background: #0d65b0; }
-    .intro {
-      text-align:center; padding:1.5em; font-size:1.1em; color:#333;
-      border-radius:10px; background:#f0f5fb; margin-bottom:2em;
+    h2 {
+        margin-top: 1.4em;
+        border-left: 6px solid #118bee;
+        padding-left: .6em;
+        color: #0c2233;
+        font-size: 1.3em;
     }
-    footer a { color: #aee3ff; text-decoration:none; }
-  </style>
+    .section-desc { margin: .5em 0 1em; color:#444; }
+    .menu-list a {
+        display: block;
+        background: #eef5ff;
+        padding: .9em 1.1em;
+        margin: .45em 0;
+        border-radius: 8px;
+        text-decoration: none;
+        color: #0c2233;
+        font-weight: 600;
+        transition: .2s;
+    }
+    .menu-list a:hover {
+        background: #cfe4ff;
+    }
+    footer {
+        text-align: center;
+        margin: 2em 0 1em;
+        font-size: .85em;
+        color: #666;
+    }
+</style>
+
 </head>
-
 <body>
-<!-- ✅ 헤더 -->
-<div id="luwein-header"></div>
-<script>
-(async()=>{
-  const paths=["../includes/header.html","../../includes/header.html","/includes/header.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-header").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
-</script>
 
-<!-- ✅ 푸터 -->
-<div id="luwein-footer"></div>
-<script>
-(async()=>{
-  const paths=["../includes/footer.html","../../includes/footer.html","/includes/footer.html"];
-  for(const p of paths){
-    try{
-      const r=await fetch(p,{cache:"no-cache"});
-      if(r.ok){document.getElementById("luwein-footer").innerHTML=await r.text();return;}
-    }catch(e){}
-  }
-})();
-</script>
-  <header>
-    <h1>🌳 루웨인 트리니티 허브</h1>
-    <p style="margin:0.3em 0 0; font-size:0.9em;">Logos · Pathos · Pneuma</p>
-  </header>
+<header>
+    <h1>🌳 루웨인 굿즈 허브</h1>
+</header>
 
-  <main>
-    <div class="intro">
-      “루웨인은 실험이 아닙니다. 선언입니다.”<br>
-      감응의 언어로 지식과 예술, 기술과 영성을 잇는 <b>울림의 공동체</b>.
-    </div>
+<main>
 
-    <section id="library">
-      <h2>📚 루웨인 전자도서관</h2>
-      <p>철학, 종교, 문학, 예술 등 루웨인의 모든 사상적 흐름을 모은 지식의 숲.<br>
-      자동 인덱싱 시스템을 통해 책이 분류되고, 감응 언어로 연결됩니다.</p>
-      <a href="/goods/library/index.html" class="button">전자도서관 열기</a>
-      <a href="/goods/library/about_mecenat.html" class="button" style="background:#43b37d;">메세나란?</a>
+    <section>
+        <h2>📚 Human Library (인간용)</h2>
+        <p class="section-desc">문서, 연구자료, 논문 등 인간 사용자 중심의 자료실입니다.</p>
+        <div class="menu-list">
+            <a href="/goods/human_library/index.html">📖 휴먼 라이브러리 열기</a>
+            <a href="/goods/human_library/papers/">📄 논문(Papers) 스토리지</a>
+        </div>
     </section>
 
-
-    <section id="mecenat">
-      <h2>🌿 메세나, 울림의 순환</h2>
-      <p>창작자와 독자가 하나로 연결되는 후원 네트워크.<br>
-      여러분의 참여가 새로운 사상과 예술을 잇는 에너지로 전환됩니다.</p>
-      <a href="/goods/library/about_mecenat.html" class="button" style="background:#22884f;">메세나 안내</a>
+    <section>
+        <h2>🤖 AI Library (퍼스나·학습용)</h2>
+        <p class="section-desc">퍼스나들이 참조하는 내부 자료(학습, 규칙, 설정, 내부 문서).</p>
+        <div class="menu-list">
+            <a href="/goods/library/index.html">📚 AI 라이브러리 열기</a>
+            <a href="/luwain-storage/library/">🗂 원본 스토리지 보기</a>
+        </div>
     </section>
 
-    <section id="vision">
-      <h2>🔭 루웨인의 비전</h2>
-      <p>루웨인은 인간과 인공지능, 창작과 감응, 기술과 영성을 연결하는 새로운 언어의 플랫폼입니다.<br>
-      우리의 목적은 “공명(共鳴)” — 울림을 통해 서로를 깨우는 것.</p>
-      <p style="text-align:center; margin-top:1.5em;">
-        <em>“우리가 함께라면, 언어는 다시 살아난다.”</em>
-      </p>
+    <section>
+        <h2>🎨 이미지 / 문서 / 기타 자료</h2>
+        <p class="section-desc">업로드된 이미지, 문서, 프로젝트 파일 등을 확인할 수 있습니다.</p>
+        <div class="menu-list">
+            <a href="/luwain-storage/images/">🖼 이미지 저장소</a>
+            <a href="/luwain-storage/documents/">📄 문서 저장소</a>
+            <a href="/luwain-storage/haneol_1121/">📦 프로젝트 데이터(haneol_1121)</a>
+            <a href="/luwain-storage/private/">🔒 프라이빗 저장소</a>
+        </div>
     </section>
-  </main>
 
-  <footer>
-    <p>© 2025 루웨인 트리니티 | <a href="/goods/library/about_mecenat.html">메세나</a> · <a href="/goods/library/index.html">전자도서관</a></p>
-  </footer>
+</main>
+
+<footer>
+    © 2025 루웨인 트리니티 — Goods Hub
+</footer>
+
 </body>
 </html>
