--- a/goods/human_library/index.html
+++ b/goods/human_library/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <title>Human Library</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Human Library</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
-        <h1>Human Library</h1>
-    </header>
+<h1>Human Library</h1>
+<div id="list"></div>
 
-    <main>
-        <div id="library-list" class="list"></div>
-    </main>
-
-    <script src="/supabase_client.js"></script>
-    <script src="human_list.js"></script>
+<script src="/supabase_client.js"></script>
+<script src="human_list.js"></script>
 </body>
 </html>
