--- a/goods/human_library/index.html
+++ b/goods/human_library/index.html
@@ -6,8 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
 <h1>Human Library</h1>
-<div id="list"></div>
+
+<div id="library-list"></div>
 
 <script src="/supabase_client.js"></script>
 <script src="human_list.js"></script>
