--- a/customer_support/customer_index.html
+++ b/customer_support/customer_index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>공지사항</title>
+<title>알림터</title>
 <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1 class="page-title">공지사항</h1>
+<h1 class="page-title">알림터</h1>
 
 <div id="notice-list"></div>
 
