--- a/breathing_room/cards/shared.html
+++ b/breathing_room/cards/shared.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
 <meta charset="UTF-8">
 <title>공유 갤러리 | 숨 틔움방</title>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
