--- a/breathing_room/cards/cards_index.html
+++ b/breathing_room/cards/cards_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
     <meta charset="UTF-8">
     <title>이미지 카드 생성</title>
     <link rel="stylesheet" href="../assets/css/common.css">
