--- a/breathing_room/musics/music_index.html
+++ b/breathing_room/musics/music_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
   <meta charset="UTF-8">
   <title>숨틔움 음악</title>
   <link rel="stylesheet" href="../common.css">
