--- a/breathing_room/musics/shared_music.html
+++ b/breathing_room/musics/shared_music.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
 <meta charset="UTF-8">
 <title>공유된 음악</title>
 <script type="module" src="/os/assets/js/core/supabase_client.js"></script>
