--- a/breathing_room/writings/write_index.html
+++ b/breathing_room/writings/write_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
   <meta charset="UTF-8" />
   <title>글쓰기방 | 숨틔움방</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
