--- a/goods/persna/index.html
+++ b/goods/persna/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
     <meta charset="UTF-8">
     <title>퍼스나 사물함</title>
     <link rel="stylesheet" href="style.css" />
