--- a/goods/scenario/scenario_index.html
+++ b/goods/scenario/scenario_index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>시나리오 | 루웨인 전자도서관</title>
