--- a/language_of_love/love_index.html
+++ b/language_of_love/love_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>사랑의 언어 - 루웨인닷넷</title>
