--- a/language_of_love/emotional_diary/emotion_index.html
+++ b/language_of_love/emotional_diary/emotion_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
   <meta charset="UTF-8">
   <title>감성일기</title>
   <link rel="stylesheet" href="style.css">
