--- a/language_of_love/shall_we_try_love/shall_index.html
+++ b/language_of_love/shall_we_try_love/shall_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
   <meta charset="UTF-8">
   <title>사랑의 연습 | 사랑의 언어</title>
   <link rel="stylesheet" href="../style/main.css">
