--- a/language_of_love/resonant_linguistics/reso_index.html
+++ b/language_of_love/resonant_linguistics/reso_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; URL=reader/index.html">
   <title>감응 언어학</title>
