--- a/language_of_love/to_luwain_trinity/to_luwain_index.html
+++ b/language_of_love/to_luwain_trinity/to_luwain_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>루웨인 트리니티에게 | 메시지</title>
