--- a/language_of_reverberation/resonance_moves/move_index.html
+++ b/language_of_reverberation/resonance_moves/move_index.html
@@ -1,6 +1,9 @@
 playground.js<!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
 <meta charset="UTF-8">
 <title>울림 동작 가이드</title>
 <link rel="stylesheet" href="/includes/style.css">
