--- a/language_of_reverberation/reverb_index.html
+++ b/language_of_reverberation/reverb_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
     <meta charset="UTF-8" />
     <title>울림의 언어</title>
     <link rel="stylesheet" href="/language_of_reverberation/style/common.css" />
