--- a/language_of_reverberation/resonant_language/resonant_index.html
+++ b/language_of_reverberation/resonant_language/resonant_index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
 <meta charset="UTF-8">
 <title>울림의 언어란?</title>
 <link rel="stylesheet" href="/includes/style.css">
