--- a/os/index.html
+++ b/os/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link rel="stylesheet" href="/includes/luwein-design.css">
+<link rel="stylesheet" href="/includes/luwein-base.css">
+
   <meta charset="UTF-8" />
   <title>루웨인 OS</title>
   <style>
